# SPE

./: CalculatorDonev1.patch  README.md
MiniProject/: CMakeLists.txt  CMakeSettings.json  Calculator.cpp  CalculatorDone.patch  Dockerfile  README.md  RunningTestsv1.txt  Setup.txt  ansible.yaml  ansible_playbook.yaml  ansible_playbook.yml  calculator-app-deployment.yml  calculator-app-service.yml  calculator-deployment.yaml  calculator-service.yaml  docker-playbook.yaml  docker-playbook.yml  kubenetes-playbook-test.yaml  kubernetes-playbook-test.yml  kubernetes-playbook.yaml  kubernetes-playbook.yml  main.cpp
MiniProject/gtest/: CMakeLists.txt
MiniProject/libs/: CMakeLists.txt  Calculator.cpp
MiniProject/libs/calc/: Calculator.h
MiniProject/libs/test/: Calculator_test.cpp
